@@ -287,7 +287,7 @@ class ModuleFinder:
             if fp.read(4) != imp.get_magic():
                 self.msgout(2, "raise ImportError: Bad magic number", pathname)
                 raise ImportError("Bad magic number in %s" % pathname)
-            fp.read(4)
+            fp.read(8)  # Skip mtime and size.
             co = marshal.load(fp)
         else:
             co = None
