@@ -29,6 +29,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #20778: Fix modulefinder to work with bytecode-only modules.
+
 - Issue #20791: copy.copy() now doesn't make a copy when the input is
   a bytes object.  Initial patch by Peter Otten.
 
